Flusspferd Change Log
=====================

Release 0.9
-----------

2010-01-26:
- Merge xml and subprocess modules to trunk

2010-01-24:
- fs-base.rawOpen aliased to fs-base.openRaw

2010-01-11:
- Create and install cmake scripts for building plugin modules (#183)

2009-12-28:
- Enable JIT by default in flusspferd REPL

2009-12-23:
- Re-added overhauled cURL module (#112).

2009-12-19:
- Add API for maybe-calling the GC (parameter maybe=true, #181).

2009-12-11:
- Improved GMP Module:
  - Deprecated C style functions (containing a _)
  - gmp.Float#precision instead of get/set_prec
  - gmp.Rational#numerator/denominator instead of get_den/num (and added set!)
  - gmp.Base#toString now accepts an optional base parameter (get_string_base deprecated!)
  - gmp.Float#getString similar to gmp.Base#toString
  - replaced asserts with exceptions
  - added error checks to ctors
  - fixed bug in gmp.Float#toString when the number was a multiple of 10
  - improved documentation
  (#164)

2009-12-08:
- C++0x compatibility: flusspferd::char16_t renamed to flusspferd::js_char16_t (#180)

2009-12-06:
- You can now throw a flusspferd::value or a flusspferd::object (or a subclass)
  from C++ rather than just specific Error types (#174).

2009-12-04:
- Add flusspferd::create_on API for creating multiple objects on the same
  container (#179).

2009-12-03:
- Improve constructor of native_function_base derived classes to have access
  to the function already in the constructor, not just afterwards, which should
  simplify the creation of custom native functions (#178).

2009-12-02:
- Add object::instance_of, which works like Javascript's "instanceof" (#128).
- Add object::constructor: it returns the object's constructor function (#172).
- Make object::constructor/prototype/parent work on const objects (#175).
- Add util/load module (#34).
- Allow loading modules from $FLUSSPFERD_USER_MODULES or
  $HOME/.flusspferd/modules (#116).